# Warhol

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: analyze-templates.mdc  author.mdc  content-development.mdc  content-extraction.mdc  content-maturity.mdc  content-planner.mdc  design-optimization.mdc  editor-agent.mdc  extract-design-system.mdc  generate-presentation.mdc  html-composition.mdc  narrative-architecture.mdc  orchestrator.mdc  project.mdc  quality-review.mdc  research-agent.mdc  template-matching.mdc
.cursor/workspace/: settings.json  tasks.json
design_systems/: shopify_technical_workshop.yaml
scripts/: analyze_templates.py  assess_content_density.py  assess_template_fit.py  auto_classify_templates.py  build_from_html.py  build_slides.py  create_base_template.py  export_thumbnails.py  extract_design_system.py  generate_basic_template.py  match_templates.py  parse_input.py  quality_check.py  render_html.py  repair_pptx.py  setup.sh  spread_content.py  validate_schema.py
src/agents/: slide_builder.py
src/parsers/: __init__.py  docx_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py
src/pptx_engine/: design_system_extractor.py  image_operations.py  shape_operations.py  slide_operations.py  template_registry.py  text_operations.py
src/pptx_engine/composers/: __init__.py  base.py  closing.py  (+7 more)
src/schemas/: __init__.py  design_system.py  html_schema.py  slide_schema.py  template_schema.py
src/utils/: file_utils.py
templates/: README.md
tests/: test_design_system_extractor.py  test_parsers.py  test_pptx_engine.py  test_schemas.py
